--- a/index.html
+++ b/index.html
@@ -49,13 +49,37 @@
     </center>
     <div class="divcontainer">
     <div class="card" >
+        <div>
 
+        </div>
+        <div class="firstextdiv">
+    <h2 class="firstcardtext">Technology Consulting </h2>
+    <h4>When it comes to technology, we're<br> your partners in creating seamless<br> solutions from start to finish. Our<br>
+         expertise lies in designing and<br> implementing scalable and finely-<br>tuned technology solutions. Whether<br> it's
+          crafting web services or portals,<br> we're here to make your vision a<br> reality.</h4>
+        </div>
     </div>
     <div class="card">
+        <div>
 
+        </div>
+        <div class="secondtextdiv">
+    <h2 class="secondcardtext">Mobile App Development </h2>
+    <h4>We specialise in crafting mobile applications that work across platforms – be it Android or iOS. 
+        Our team of skilled developers ensures that
+         your app not only functions flawlessly but also provides an excellent user experience, no matter the device.</h4>
+        </div>
     </div>
     <div class="card">
+        <div>
 
+        </div>
+        <div class="thirdtextdiv">
+    <h2 class="thirdcardtext">Website Development </h2>
+    <h4>Our collective of visual designers and web developers are dedicated to 
+        bringing your dream website to life. By understanding your unique requirements, we focus on every detail to deliver
+         a website that not only meets but exceeds your expectations.</h4>
+        </div>
     </div>
     </div>
    </div>
