--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
     <button class="button">LEARN MORE</button>
     </div>
    </div>
+   <!--About aspect-->
    <div class="aboutdiv" id="about">
     <center>
     <h1 class="about1">About Us</h1>
     <h3 class="aboutext">We provide technology services that satisfy current and emerging<br> business requirements of brands and the society. Our iterative process<br> includes: Requirement gathering, Design, Implementation, Testing,<br> Deploy & Maintain.</h3>
     </center>
    </div>
-   <div>
+   <!--Services aspects-->
+   <div id="Services">
     <center>
-    <h1 class="servicetext" >Our Services
+    <h1 class="servicetext">Our Services
     </h1>
     </center>
     <div class="divcontainer">
     <div class="card" >
-        <div>
-
-        </div>
         <div class="firstextdiv">
+            <img src="user (1).png" alt="usericon">
     <h2 class="firstcardtext">Technology Consulting </h2>
     <h4>When it comes to technology, we're<br> your partners in creating seamless<br> solutions from start to finish. Our<br>
          expertise lies in designing and<br> implementing scalable and finely-<br>tuned technology solutions. Whether<br> it's
@@ -60,28 +60,81 @@
         </div>
     </div>
     <div class="card">
-        <div>
-
-        </div>
         <div class="secondtextdiv">
+            <img src="mobile.png" alt="mobileicon">
     <h2 class="secondcardtext">Mobile App Development </h2>
-    <h4>We specialise in crafting mobile applications that work across platforms – be it Android or iOS. 
-        Our team of skilled developers ensures that
-         your app not only functions flawlessly but also provides an excellent user experience, no matter the device.</h4>
+    <h4>We specialise in crafting mobile<br> applications that work across<br>
+         platforms – be it Android or iOS. Our<br>
+          team of skilled developers ensures <br>
+          that your app not only functions<br> 
+          flawlessly but also provides an<br>
+           excellent user experience, no matter<br> the device.</h4>
         </div>
     </div>
     <div class="card">
-        <div>
-
-        </div>
         <div class="thirdtextdiv">
+            <img src="laptop.png" alt="laptopicon">
     <h2 class="thirdcardtext">Website Development </h2>
-    <h4>Our collective of visual designers and web developers are dedicated to 
-        bringing your dream website to life. By understanding your unique requirements, we focus on every detail to deliver
-         a website that not only meets but exceeds your expectations.</h4>
+    <h4>Our collective of visual designers and<br> web developers are dedicated to <br>
+        bringing your dream website to life. By<br> understanding your unique <br>
+        requirements, we focus on every detail<br> to deliver
+         a website that not only<br> meets but exceeds your expectations.</h4>
         </div>
     </div>
     </div>
+<!--the class of the div is the same as the class above-->
+    <div class="divcontainer">
+        <div class="card" >
+            <div class="firstextdiv">
+                <img src="user (1).png" alt="usericon">
+        <h2 class="firstcardtext">Interactive Voice Response(IVR) </h2>
+        <h4>Automation is the way of the future,<br> and we're at the forefront of voice-<br>based automation.
+             We create <br>automated inbound and <br>> processes through Interactive Voice<br> Response systems. 
+            This means<br> smoother interactions and more<br> efficient communication for your<br> business.</h4>
+            </div>
+        </div>
+        <div class="card">
+            <div class="secondtextdiv">
+                <img src="mobile.png" alt="mobileicon">
+        <h2 class="secondcardtext"> SMS /USSD Application /Airtime billing </h2>
+        <h4>With a wealth of experience in<br> deploying Telecoms Value Added<br> Service ESME applications 
+            across<br> various channels, we've got your <br>communication needs covered. From<br> SMS to USSD \
+            applications and airtime<br> billing, our solutions are tailored to<br> keep you connected..</h4>
+            </div>
+        </div>
+        <div class="card">
+            <div class="thirdtextdiv">
+                <img src="laptop.png" alt="laptopicon">
+        <h2 class="thirdcardtext"> AR/VR Development </h2>
+        <h4>Step into the realm of augmented and<br> virtual reality with us. Our team<br> specialises
+             in developing immersive<br> experiences that blend the virtual <br>> real worlds seamlessly. Whether it's<br> for entertainment,
+             education, or<br> business, we're here to bring your<br> AR/VR ideas to life</h4>
+            </div>
+        </div>
+        </div>
+
+
+   </div>
+   <!--Clients and partners aspect-->
+   <div>
+    <center>
+        <h1 class="clientext" >Clients and Partners
+        </h1>
+        </center>
+        <div class="clientdiv">
+            <div class="imgdiv">
+        <img src="tmlogo.png" alt="tmlogo" class="tm">
+        <img src="rs-logo.png" alt="rslogo" class="rs">
+        <img src="megastore.png" alt="megastore" class="mega">
+        <img src="kodobe" alt="kodobe" class="kodobe">
+        <img src="e-logo.png" alt="elogo" class="elogo">
+        <img src="novaji.png" alt="novaji" class="novaji">
+            </div>
+        </div>
+   </div>
+   <!--Contact us section-->
+   <div>
+    <center><h1 class="contact">Contact Us</h1></center>
    </div>
 </body>
 </html>
