--- a/index.html
+++ b/index.html
@@ -175,7 +175,42 @@
     </div>
    </div>
    <footer class="footer">
-
+<div class="midfooter">
+<div class="info">
+    <img src="logo.png" alt="company-logo" class="footerlogo">
+    <h5>1A Hughes Avenue,<br>
+        Alagomeji,<br>
+        Lagos
+    </h5>
+    <h5>Phone: +234 802 416 9217</h5>
+    <h5>Email: info@sanimara.com</h5>
+</div>
+<div class="links">
+    <h4>Useful Links</h4>
+    <h5>&gt;&nbsp; Home</h5>
+    <h5>&gt;&nbsp; About</h5>
+    <h5>&gt;&nbsp; Services</h5>
+</div>
+<div class="ourservices">
+    <h4>Our Services</h4>
+    <h5>&gt;&nbsp; Technology Consulting</h5>
+    <h5>&gt;&nbsp; Mobile App Development</h5>
+    <h5>&gt;&nbsp; Website Development</h5>
+    <h5>&gt;&nbsp; Interactive Voice Response(IVR)</h5>
+    <h5>&gt;&nbsp; SMS /USSD Application /Airtime billing</h5>
+    <h5>&gt;&nbsp; AR/VR Development</h5>
+</div>
+<div class="social">
+    <h3>Our Social Network</h3>
+    <h4>Follow us on social media</h4>
+</div>
+</div>
+<div class="lastfooter">
+    <div class="textlastfooter">
+<h4>&copy;Copyright <b>Sanimara.</b>All Rights Reserved</h4>
+<h4 class="designed">Designed by <span class="span1">Edmund solutions</span></h4>
+    </div>
+</div>
    </footer>
 </body>
 </html>
